app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";
@import "twitter/bootstrap/responsive";

// Set the correct sprite paths - based on twitter-bootstrap-rails 2.2.8
// This path was not working in production running on Openshift.
@iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");

// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
//@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot?#iefix");
@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot#iefix");
@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");

// Font Awesome - comment this line below if using Glyphicons
@import "fontawesome/font-awesome";

// Glyphicons - comment the line below if using Font Awesome
// @import "twitter/bootstrap/sprites.less";

// Your custom LESS stylesheets goes here
//
// Since bootstrap was imported above you have access to its mixins which
// you may use and inherit here
//
// If you'd like to override bootstrap's own variables, you can do so here as well
// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
//
// Example:
// @linkColor: #ff0000;

// Navigation Tweaks ---------------------------------------------------

@navbarHeight: 74px;
@navbarBackground: #ffffff;
@navbarBackgroundHighlight: #ffffff;
// @navbarText
@navbarBrandColor: #444444;
@navbarLinkColor:  #FF3500;
@navbarLinkColorHover: #ffffff;
@navbarLinkColorActive: #ffffff;
@navbarLinkBackgroundHover: #BBBBBB;
@navbarLinkBackgroundActive: #FF3500;
// @navbarSearchBackground
// @navbarSearchBackgroundFocus
// @navbarSearchBorder
// @navbarSearchPlaceholderColor
// @navbarCollapseWidth
// @navbarCollapseDesktopWidth

//Logo
.logo {
	padding: 7px 10px 1px 0px;
}

// Carousel overrides 
.carousel .item > img {
	display: block;
  line-height: 1;
	width: 100%;
}

// Footer Tweaks -------------------------------------------------------
@footerBackground: #aaaaaa;

footer {
	background-color: @footerBackground;
}

footer .widget {
	padding: 10px 10px 10px 10px;
}


// General Tweaks ------------------------------------------------------
@linkColor: @navbarLinkColor;

// Setup hover color for nav-list menu items
.nav-list > li > a:hover {
  background-color: @navbarLinkBackgroundHover;
  color: @navbarLinkColorHover;
}

// Align icons with text using baseline alignment
[class^="icon-"], [class*=" icon-"] {
  vertical-align: baseline;
}

